- DEVSU-2760 - Set maxWidth for setFilter to prevent dialog cropping out of screen

--- a/app/components/DataTable/components/CustomSetFilter/index.scss
+++ b/app/components/DataTable/components/CustomSetFilter/index.scss
@@ -3,6 +3,7 @@
   padding-top: 0;
   width: auto;
   max-height: 400px;
+  max-width: 400px;
   overflow-y: auto;
   font-family: Arial, sans-serif;
 }
